# goxviet-ime

./: .gitignore  .rule  .rules  AGENTS.md  BACKSPACE_IMPLEMENTATION_COMPLETE.md  BUGFIX_SUMMARY_2025-12-22.md  BUGFIX_SUMMARY_2025-12-23.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  generate_dictionary.py  generate_optimized_dictionary.py
core/: AGENT.override.md  ARCHITECTURE.md  Cargo.toml  DEPENDENCY_GRAPHS.md  FFI_API.md  FFI_API_V2_DESIGN.md  INTEGRATION_TEST_PLAN.md  LEGACY_CLEANUP.md  MIGRATION_GUIDE.md  MIGRATION_STRATEGY.md  PHASE_6_7_8_PLAN.md  PHASE_6_BUILD_AND_TEST_SESSION.md  PHASE_6_FFI_ABI_ISSUE.md  PHASE_6_FFI_TEST_REPORT.md  PHASE_6_INTEGRATION_TEST_REPORT.md  PHASE_6_PROGRESS_REPORT.md  PHASE_6_SESSION_REPORT.md  PHASE_6_SUMMARY.md  PHASE_7_DEPRECATION_COMPLETE.md  PHASE_7_EXPORTS_UPDATE_COMPLETE.md  PHASE_7_FEATURE_FLAGS_COMPLETE.md  PHASE_7_FFI_V2_IMPLEMENTATION.md  PHASE_8_DELETION_SUMMARY.md  PHASE_8_PROGRESS.md  PHASE_8_REMOVAL_CHECKLIST.md  PHASE_8_SCOPE_REVISION.md  PHASE_8_TASK_3_SUMMARY.md  PROJECT_STATUS_SUMMARY.md  SEQUENCE_DIAGRAMS.md  SOLID_ARCHITECTURE.md  SOLID_REFACTORING_PROGRESS.md  UNIFIED_ENGINE.md  test_api  test_debug.rs  test_debug_viet  test_debug_viet.rs  test_ffi_direct.rs  test_viet
core/benches/: backspace_bench.rs  clean_arch_bench.rs  clean_arch_ffi_bench.rs  encoding_bench.rs  english_detection_bench.rs  memory_bench.rs  shortcut_bench.rs
core/examples/: processors_demo.rs  test_received.rs  test_space.rs  test_trace.rs  test_trace2.rs  test_word.rs
core/src/: lib.rs  unified_engine.rs  utils.rs
core/src/application/: mod.rs
core/src/data/: constants.rs  keys.rs  mod.rs  vowel.rs
core/src/domain/: mod.rs
core/src/engine/: config.rs  edge_cases_tests.rs  english_detection.rs  history.rs  mod.rs  raw_input_buffer.rs  rebuild.rs  shortcut.rs  tone_positioning.rs  transform.rs  (+2 more)
core/tests/: DICTIONARY_TEST_FAILURE_ANALYSIS_V2.md  ENGINE_BUG_FIXES_SUMMARY.md  backspace_spec_compliance_test.rs  console_test.rs  debug_camaa.rs  debug_och_test.rs  debug_push_merge_test.rs  di_sac_bug_test.rs  diacritical_validation_tests.rs  dict_restore_test.rs  dictionary_english_test.rs  dictionary_test_failures_report.md  dictionary_vietnamese_test.rs  double_consonant_test.rs  engine_bug_fixes_test.rs  english_auto_restore_debug_test.rs  english_auto_restore_test.rs  english_word_modifier_bypass_test.rs  eval_english_100k.rs  eval_vietnamese_22k.rs  final_push_test.rs  fjz_english_detection_test.rs  gi_initial_comprehensive_test.rs  gio_tone_test.rs  giong_regression_test.rs  language_detection_refinement_test.rs  och_bug_test.rs  pha_simple_test.rs  phat_tone_test.rs  phonotactic_trans_test.rs  push_merge_auto_restore_test.rs  push_step_by_step_test.rs  repro_arc_space.rs  reproduce_issue_55.rs  res_sac_test.rs  restore_sh_prefix_test.rs  result_debug_test.rs  shift_backspace_test.rs  shortcut_expansion_test.rs  simple_sex_test.rs  (+22 more)
(+429 files in other folders)
