[package]
name = "vietnamese-ime-core"
version = "0.1.0"
edition = "2021"
authors = ["Vietnamese IME Contributors"]
license = "MIT"
description = "Vietnamese input method core engine"

[lib]
name = "vietnamese_ime_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Minimal dependencies for core engine

[dev-dependencies]
rstest = "0.18"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
strip = true             # Strip symbols
panic = "abort"          # Smaller binary

[profile.dev]
opt-level = 0            # Fast compilation
debug = true             # Full debug info

[[bench]]
name = "backspace_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false